
2007-07-15  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Rename 'id-utils' to 'idutils', remove
	the dead 'impost'.

2007-07-14  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/welcome.html: Mention that the TP handles only gettextized
	packages, add a hyperlink to the online gettext manual, remove some
	dead text, and add a paragraph about past and current managers.

	* registry/registry.sgml: Remove the obsolete domains 'batchelor',
	'silky', and 'sketch'.

	* bin/create-mail-aliases: Use braces to create groups of commands,
	instead of artificially chopping up long lines.

2007-07-13  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Shorten and tweak some rejection texts, and separate
	them by blank lines.

	* bin/po-register: Solve the bug where the symlink in latest/ would
	sometimes not get updated: having a maintainer's email address should
	not be a condition for this.

2007-07-12  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Shorten and clarify the texts that explain why the
	submitting translator is not allowed to do so.

2007-07-09  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/Makefile, webgen/stepinto.html.in: Remove the redirecting
	index page, made obsolete by a permanent redirection in Apache.

	* README: Add an entry about obsoleting a package.

	* registry/registry.sgml: Remove the obsolete domain 'python';
	modern versions are not gettextized any more.

2007-07-07  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register: Regenerate the team page _after_ the symlink in
	latest/ has been made.

	* registry/Makefile: Make the target for normalizing whitespace
	simpler, so it can be used locally without any commits.

2007-07-05  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Remove the obsolete domains 'fileutils',
	'sh-utils', and 'textutils'; they were merged to form 'coreutils'.
	Remove 'gettext' too; it was split into three subpackages.
